RESOLVED FIXED130633
Assertions in WebPage::rangeFromEditingRange when requested range location is NSNotFound
https://bugs.webkit.org/show_bug.cgi?id=130633
Summary Assertions in WebPage::rangeFromEditingRange when requested range location is...
Alexey Proskuryakov
Reported 2014-03-21 22:59:01 PDT
We are seeing that firstRectFromCharacterRange is sometimes called with an invalid range. <rdar://problem/16397583>
Attachments
proposed fix (2.84 KB, patch)
2014-03-21 23:02 PDT, Alexey Proskuryakov
no flags
Alexey Proskuryakov
Comment 1 2014-03-21 23:02:01 PDT
Created attachment 227535 [details] proposed fix
WebKit Commit Bot
Comment 2 2014-03-22 09:51:28 PDT
Comment on attachment 227535 [details] proposed fix Clearing flags on attachment: 227535 Committed r166115: <http://trac.webkit.org/changeset/166115>
WebKit Commit Bot
Comment 3 2014-03-22 09:51:31 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.