Assertions in WebPage::rangeFromEditingRange when requested range location is NSNotFound https://bugs.webkit.org/show_bug.cgi?id=130633 <rdar://problem/16397583>

Reviewed by Darin Adler.

* UIProcess/API/mac/WKView.mm:
(-[WKView firstRectForCharacterRange:completionHandler:]):
(-[WKView firstRectForCharacterRange:actualRange:]):
Return NSZeroRect, like NSTextView does for any locations that are out of bounds.
There is no need for a round trip to WebProcess in this case.


Canonical link: https://commits.webkit.org/148651@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@166115 268f45cc-cd09-0410-ab3c-d52691b4dbfc